<resources>
    <string name="app_name">ShubhamEduApp</string>
    <string name="question_1_3">Question 1 (/3)</string>
    <string name="score_10_30">Score: 10 / 30</string>
    <string name="duration_100">Duration: 100</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="answer">Answer</string>
    <string name="todo">TODO</string>
    <string name="enter_username">Enter Username</string>
    <string name="go">GO</string>
    <string name="username">Username:</string>
    <string name="score_list">SCORE LIST</string>
    <string name="setting">SETTING</string>
    <string name="select_a_level">SELECT A LEVEL</string>
    <string name="play">PLAY</string>
    <string name="light_mode">Light Mode</string>
    <string name="name">NAME</string>
    <string name="level">LEVEL</string>
    <string name="score">SCORE</string>
    <string name="time">TIME</string>
    <string name="date">DATE</string>
    <string-array name="levels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>