<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#C0EDE9">
        <TextView
            android:id="@+id/usernameView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/levelView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/durationView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold" />
    </TableRow>

</FrameLayout>